--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "axios": "^1.7.3",
     "next": "14.2.5",
+    "next-seo": "^6.5.0",
     "react": "^18",
     "react-dom": "^18",
     "sonner": "^1.5.0"
